# viscom_framework_core

./: .gitignore  .gitmodules  CMakeLists.txt  CMake_core.cmake  CMake_core.txt
src/core/: ApplicationNodeBase.cpp  ApplicationNodeBase.h  SlaveNodeInternal.cpp  config.cpp
src/core/gfx/: FullscreenQuad.h  GPUProgram.cpp  GPUProgram.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/core/gfx/mesh/: Mesh.cpp  MeshRenderable.h  SceneMeshNode.h
src/core/imgui/: imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
src/core/resources/: Resource.cpp  ResourceManager.h
src/core/utils/: utils.h
src_nosgct/core/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h
src_sgct/core/: ApplicationNodeInternal.cpp  ApplicationNodeInternal.h
